# cli-rust

./: Cargo.toml  README.md
crates/catr/: Cargo.toml
crates/catr/src/: main.rs
crates/echor/: Cargo.toml  mk-outs.sh
crates/echor/src/: main.rs
crates/echor/tests/: cli.rs
crates/headr/: Cargo.toml
crates/headr/src/: main.rs
