[package]
name = "catr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {workspace = true, features = ["derive"]}
anyhow = {workspace = true}

[dev-dependencies]
assert_cmd = {workspace = true}
predicates = {workspace = true}
pretty_assertions = {workspace = true}
rand = {workspace = true}
