[package]
name = "headr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}

[dev-dependencies]
assert_cmd = {workspace = true}
predicates = {workspace = true}
pretty_assertions = {workspace = true}
rand = {workspace = true}
